Fix invisible link on selected dataset [fix #27928569]

--- a/app/assets/stylesheets/modals/_pick_items.scss
+++ b/app/assets/stylesheets/modals/_pick_items.scss
@@ -22,7 +22,11 @@
                 &.selected {
                     background-color: $picklist-selected-background-color;
 
-                    .name {
+                  a {
+                    color: white;
+                  }
+
+                  .name {
                         color: white;
                     }
                 }
